@@ -2,12 +2,12 @@ package com.shopauc.service;
 
 import com.shopauc.exception.*;
 import com.shopauc.model.*;
-import com.shopauc.util.FileManager;
+import com.shopauc.util.DatabaseManager;
 import com.shopauc.util.PasswordUtil;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Marketplace {
 
@@ -20,13 +20,16 @@ public class Marketplace {
 
     private List<User> users;
     private List<Product> products;
+    private List<AuctionProduct> auctions;
     private List<Order> orders;
     private List<CartItem> cart;
     private User currentUser;
 
     private Marketplace() {
-        users    = FileManager.loadUsers();
-        products = FileManager.loadProducts();
+        DatabaseManager db = DatabaseManager.getInstance();
+        users    = db.loadUsers();
+        products = db.loadProducts();
+        auctions = db.loadAuctions();
         orders   = new ArrayList<>();
         cart     = new ArrayList<>();
     }
@@ -35,47 +38,51 @@ public class Marketplace {
         String hashed = PasswordUtil.hash(password);
         for (User u : users)
             if (u.getEmail().equals(email) && u.getPassword().equals(hashed)) {
-                currentUser = u;
-                return u;
+                currentUser = u; return u;
             }
         return null;
     }
 
     public boolean register(String name, String email, String password, String role) {
-        for (User u : users)
-            if (u.getEmail().equals(email)) return false;
-        int newId = users.isEmpty() ? 1 :
-                Collections.max(users.stream().map(User::getId).toList()) + 1;
+        for (User u : users) if (u.getEmail().equals(email)) return false;
+        int newId = DatabaseManager.getInstance().getNextUserId();
         String hashed = PasswordUtil.hash(password);
         User newUser = role.equals("BUYER")
                 ? new Buyer(newId, name, email, hashed)
                 : new Seller(newId, name, email, hashed);
         users.add(newUser);
-        FileManager.saveUsers(users);
+        DatabaseManager.getInstance().saveUser(newUser, role);
         return true;
     }
 
     public void logout() { currentUser = null; }
     public User getCurrentUser() { return currentUser; }
     public List<Product> getProducts() { return products; }
+    public List<AuctionProduct> getAuctions() { return auctions; }
 
     public List<Product> getProductsBySeller(int sellerId) {
-        return products.stream().filter(p -> p.getSellerId() == sellerId).toList();
+        return products.stream().filter(p -> p.getSellerId() == sellerId).collect(Collectors.toList());
     }
 
-    public void addProduct(String name, double price, int stock, String category) {
-        int newId = products.isEmpty() ? 1 :
-                Collections.max(products.stream().map(Product::getId).toList()) + 1;
-        products.add(new Product(newId, name, price, stock, currentUser.getId(), category));
-        FileManager.saveProducts(products);
+    public List<AuctionProduct> getAuctionsBySeller(int sellerId) {
+        return auctions.stream().filter(a -> a.getSellerId() == sellerId).collect(Collectors.toList());
     }
 
-    public void addAuctionProduct(String name, double startingPrice, int hoursUntilEnd, String category) {
-        int newId = products.isEmpty() ? 1 :
-                Collections.max(products.stream().map(Product::getId).toList()) + 1;
+    public void addProduct(String name, String brand, double price, int stock, String category) {
+        int newId = DatabaseManager.getInstance().getNextProductId();
+        Product p = new Product(newId, name, brand, price, stock, currentUser.getId(), category);
+        products.add(p);
+        DatabaseManager.getInstance().saveProduct(p);
+    }
+
+    public void addAuctionProduct(String name, String brand, double startingPrice,
+                                   int hoursUntilEnd, String category) {
+        int newId = DatabaseManager.getInstance().getNextProductId();
         LocalDateTime endTime = LocalDateTime.now().plusHours(hoursUntilEnd);
-        products.add(new AuctionProduct(newId, name, startingPrice, currentUser.getId(), endTime, category));
-        FileManager.saveProducts(products);
+        AuctionProduct ap = new AuctionProduct(newId, name, brand, startingPrice,
+                currentUser.getId(), endTime, category);
+        auctions.add(ap);
+        DatabaseManager.getInstance().saveAuction(ap);
     }
 
     public void addToCart(Product product, int quantity) throws InsufficientStockException {
@@ -83,8 +90,7 @@ public class Marketplace {
             throw new InsufficientStockException(product.getName());
         for (CartItem ci : cart)
             if (ci.getProduct().getId() == product.getId()) {
-                ci.setQuantity(ci.getQuantity() + quantity);
-                return;
+                ci.setQuantity(ci.getQuantity() + quantity); return;
             }
         cart.add(new CartItem(product, quantity));
     }
@@ -106,30 +112,28 @@ public class Marketplace {
         for (CartItem ci : cart)
             if (ci.getProduct().getStock() < ci.getQuantity())
                 throw new InsufficientStockException(ci.getProduct().getName());
-        for (CartItem ci : cart)
-            ci.getProduct().setStock(ci.getProduct().getStock() - ci.getQuantity());
-        int newId = orders.isEmpty() ? 1 :
-                Collections.max(orders.stream().map(Order::getId).toList()) + 1;
+        for (CartItem ci : cart) {
+            int newStock = ci.getProduct().getStock() - ci.getQuantity();
+            ci.getProduct().setStock(newStock);
+            DatabaseManager.getInstance().updateProductStock(ci.getProduct().getId(), newStock);
+        }
+        int newId = orders.isEmpty() ? 1 : orders.stream().mapToInt(Order::getId).max().getAsInt() + 1;
         Order order = new Order(newId, currentUser.getId(), new ArrayList<>(cart));
         orders.add(order);
-        FileManager.saveProducts(products);
         clearCart();
         return order;
     }
 
     public void placeBid(AuctionProduct ap, double amount)
             throws InvalidBidException, AuctionExpiredException {
-        if (ap.isExpired())
-            throw new AuctionExpiredException(ap.getName());
-        if (amount < ap.getStartingPrice())
-            throw new InvalidBidException(ap.getStartingPrice(), amount);
-        if (amount <= ap.getCurrentBid())
-            throw new InvalidBidException(ap.getCurrentBid(), amount);
+        if (ap.isExpired()) throw new AuctionExpiredException(ap.getName());
+        if (amount < ap.getStartingPrice()) throw new InvalidBidException(ap.getStartingPrice(), amount);
+        if (amount <= ap.getCurrentBid()) throw new InvalidBidException(ap.getCurrentBid(), amount);
         ap.placeBid(amount, currentUser.getId(), currentUser.getName());
-        FileManager.saveProducts(products);
+        DatabaseManager.getInstance().saveAuction(ap);
     }
 
     public List<Order> getOrdersByBuyer(int buyerId) {
-        return orders.stream().filter(o -> o.getBuyerId() == buyerId).toList();
+        return orders.stream().filter(o -> o.getBuyerId() == buyerId).collect(Collectors.toList());
     }
 }
